--- a/PHASE_1/API_SourceCode/functions/package.json
+++ b/PHASE_1/API_SourceCode/functions/package.json
@@ -13,6 +13,7 @@
     "node": "8"
   },
   "dependencies": {
+    "acorn": "^7.1.1",
     "firebase-admin": "^8.9.2",
     "firebase-functions": "^3.3.0",
     "morgan": "^1.9.1"
